tests/neg-custom-args/captures/lazylists-exceptions.check
-- Error: tests/neg-custom-args/captures/lazylists-exceptions.scala:36:2 -----------------------------------------------
36 |  try  // error
   |  ^
   |  Result of `try` cannot have type LazyList[Int]^ since
   |  that type captures the root capability `cap`.
   |  This is often caused by a locally generated exception capability leaking as part of its result.
   |
37 |    tabulate(10) { i =>
38 |...
41 |  catch case ex: Ex1 => LazyNil
